# pyquick

./: .release-please-config.json  README.md  pyproject.toml
.github/workflows/: publish.yml  release-manual.yml  release-please.yml
.kilocode/rules/memory-bank/: architecture.md  brief.md  context.md  product.md  tech.md
docs/: README.md  alpha-feedback-template.md  command-contract-v1.md  fastapi-scaffold-template.md  quickstart-alpha.md  troubleshooting-alpha.md
docs/examples/: pyignite.toml
docs/getting-started/: README.md  quickstart-lib.md
docs/reference/: README.md  command-contract-v1.md  profile-template-contract-v2.md
docs/release/: README.md  github-releases.md  pypi-publishing.md  release-alpha-checklist.md  releasing.md
infra/ci/: github-actions-notes.md
scripts/: build.py
src/anvil/: cli.py  config.py  dev.py  patch.py  profiles.py  pyproject.py  run.py  tools.py  validator.py
src/anvil/commands/: dev.py  run.py
src/pyignite/: config.py
src/pyignite/commands/: __init__.py  dev.py  new.py
src/pyignite/devloop/: __init__.py  orchestrator.py
src/pyignite/scaffold/: __init__.py  fastapi.py  writer.py
src/pyignite/tooling/: adapters.py
src/pyqck/: config.py
src/pyqck/commands/: new.py
src/pyqck/scaffold/: __init__.py  catalog.py  lib_template.py  registry.py
testlib/: anvil.toml
testlib/src/testlib/: __init__.py
testlib/tests/: test_sanity.py
tests/: test_cli.py  test_dev.py  test_patch.py  test_run.py  test_validator.py
tests/e2e/: test_lib_workflow_e2e.py  test_new_command.py
tests/unit/: test_config.py  test_devloop_orchestrator.py  test_fastapi_scaffold_template.py  test_lib_scaffold_template.py  test_scaffold_registry.py  test_tooling_adapters.py
