[project]
name = "anvil"
version = "0.1.0"
description = "Toolchain orchestrator for fast and clean project setup"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Manoah BERNIER"},
]
maintainers = [
    {name = "Manoah BERNIER"},
]
keywords = ["cli", "toolchain", "python", "development"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "watchdog>=3.0.0",
    "pyyaml>=6.0.0",
    "tomli>=2.3.0",
]

[project.urls]
Homepage = "https://github.com/mhbxyz/anvil"
Repository = "https://github.com/mhbxyz/anvil"
Issues = "https://github.com/mhbxyz/anvil/issues"
Changelog = "https://github.com/mhbxyz/anvil/blob/main/CHANGELOG.md"

[project.scripts]
anvil = "anvil.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anvil"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.hatch.build.targets.binary]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]
sources = ["src"]
artifacts = ["dist/"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "pyright>=1.1.0",
    "bandit>=1.7.0",
    "pyinstaller>=6.0.0",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101", "B601"]
