[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "pyqck"
version = "0.1.2"
description = "PyQuick is the developer toolchain for Python APIs"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "PyQuick Team" }]
keywords = ["python", "cli", "toolchain", "scaffold", "developer-experience"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Code Generators",
]
dependencies = [
  "rich>=13.9.0",
  "typer>=0.16.0",
  "watchfiles>=1.1.0",
]

[project.urls]
Homepage = "https://github.com/mhbxyz/pyquick"
Repository = "https://github.com/mhbxyz/pyquick"
Issues = "https://github.com/mhbxyz/pyquick/issues"
Documentation = "https://github.com/mhbxyz/pyquick/tree/main/docs"

[project.optional-dependencies]
dev = [
  "pyright>=1.1.390",
  "pytest>=8.3.0",
  "ruff>=0.8.0",
]

[project.scripts]
pyqck = "pyqck.cli:main"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
